# CrowCPP-examples

./: LICENSE  README.md
10. file_upload_server/: .gitignore  CMakeLists.txt  Readme.md
11. file_download_server/: main.cpp  sample.txt
4. html-serving/: main.cpp
4. html-serving/public/: about.html
5. ssl_example/: CMakeLists.txt
6. strict_https/: CMakeLists.txt  main.cpp  server.crt
7. websocket_example/: server.cpp
8. user_authentication/: CMakeLists.txt
8. user_authentication/resources/: login.html
8. user_authentication/src/: main.cpp
9. jwt_example/: login.html
file_download_server/: CMakeLists.txt  Readme.md  aarch64-toolchain.cmake
file_upload_server/: aarch64-toolchain.cmake
hello-world-example/: CMakeLists.txt  main.cpp
html-serving/: CMakeLists.txt  README.md  build.sh  run.sh
html-serving/public/: app.js  index.html  style.css
html-serving/ssl_certs/: server.key
jwt_example/: CMakeLists.txt  README.md  index.html  jwt_auth.cpp  jwt_auth.h  jwt_middleware.h  main.cpp
ssl_example/: Readme.md  main.cpp
strict_https/: Readme.md
user_authentication/: README.md
user_authentication/inc/: auth_manager.h
user_authentication/resources/: dashboard.html  register.html
user_authentication/src/: auth_manager.cpp
websocket_example/: CMakeLists.txt
websocket_example/templates/: ws.html
